# nevo

./: LICENSE  README.md  build_android.cmd  build_windows.cmd
cmake/glew/: CMakeLists.txt
cmake/nevo/: CMakeLists.txt
java/nevo/: SurfaceTextureHandler.java
nevo/: error.h  nevo.h  platform.h
nevo/opengl/: context.cpp  context.h
nevo/platform/android/: entrypoint.cpp  entrypoint.h  native_window_lock.h
nevo/platform/android/egl/: context.h  display.h  surface.h
nevo/platform/android/opengl/: context.cpp  context.h
nevo/platform/windows/: message_loop.h  window.cpp  window.h  window_class.h
nevo/platform/windows/opengl/: context.cpp  context.h
samples/one/: build_android.cmd  build_windows.cmd
samples/one/cmake/: CMakeLists.txt
samples/one/src/platform/android/: main.cpp
samples/one/src/platform/windows/: main.cpp
